Fixed some layout issues on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,8 @@ a {
   border-radius: 40px;
 }
 
-.card:hover {
-  transform: scale(1.05);
+.card.testimonial:hover {
+  transform: scale(1.03);
 }
 
 .card.card--perspectiveX:hover {
@@ -283,11 +283,11 @@ a {
 }
 
 .nav__reg-sign {
-  display: inline-block;
   position: absolute;
   color: #4073de;
   font-size: 2.3rem;
   top: 5px;
+  right: -17px;
 }
 
 @media screen and (max-width: 500px) {
@@ -301,6 +301,7 @@ a {
 
   .nav__reg-sign {
     font-size: 1.4rem;
+    right: -10px;
   }
 }
 
@@ -792,6 +793,7 @@ a {
 .contacts__phone-number {
   margin-left: 2rem;
   font-size: 3rem;
+  color: #fff;
 }
 
 .contacts__address {
